# automation

./: README.md  email-extracted.txt  emails.py  phone-num-extracted.txt  phone.py  pyproject.toml
tests/: test_automation.py
